--- a/src/pdfread-gui.ini
+++ b/src/pdfread-gui.ini
@@ -21,31 +21,31 @@
 ; DEALINGS IN THE SOFTWARE.
 
 [Settings]
-NumFields=17
+NumFields=32
 
 [Field 1]
 Type=Groupbox
-Text=Input
+Text=Input and Output
 Left=0
 Right=300
 Top=0
-Bottom=48
+Bottom=64
 
 [Field 2]
 Type=Groupbox
-Text=Metadata
+Text=Processing
 Left=0
 Right=300
-Top=49
-Bottom=118
+Top=64
+Bottom=129
 
 [Field 3]
 Type=FileRequest
 Flags=FILE_MUST_EXIST|FILE_EXPLORER|FILE_HIDEREADONLY
-Left=60
-Right=294
+Left=27
+Right=257
 Top=9
-Bottom=24
+Bottom=22
 Filter=PDF Documents|*.pdf|DJVU Documents|*.djvu|All Files|*.*|
 MinLen=1
 
@@ -53,113 +53,246 @@ MinLen=1
 Type=Droplist
 MinLen=1
 Text=Droplist
-ListItems=
-Left=60
-Right=126
-Top=30
-Bottom=44
+ListItems=pdf|djvu|tiff|imglist
+Left=260
+Right=296
+Top=9
+Bottom=24
+State=pdf
 
 [Field 5]
-Type=Droplist
+Type=Text
 MinLen=1
-Text=Droplist
-ListItems=
-Left=161
-Right=241
-Top=30
-Bottom=44
+Left=28
+Right=100
+Top=27
+Bottom=40
 
 [Field 6]
 Type=Text
-MinLen=1
-Left=60
-Right=294
-Top=59
-Bottom=72
+Left=134
+Right=205
+Top=27
+Bottom=38
 
 [Field 7]
 Type=Text
-Left=60
-Right=294
-Top=78
-Bottom=92
+Left=242
+Right=295
+Top=27
+Bottom=38
 
 [Field 8]
-Type=Text
-Left=60
-Right=294
-Top=99
-Bottom=112
+Type=FileRequest
+Flags=FILE_EXPLORER|REQ_SAVE|WARN_IF_EXIST|FILE_HIDEREADONLY
+Left=28
+Right=258
+Top=44
+Bottom=57
+Filter=Rocket eBook|*.rb|IMP eBook|*.imp|Sony BBeB|*.lrf|HTML Document|*.html|
 
 [Field 9]
-Type=FileRequest
-Flags=FILE_EXPLORER|WARN_IF_EXIST|FILE_HIDEREADONLY
-Left=61
-Right=295
-Top=121
-Bottom=136
+Type=Checkbox
+Text=preview
+Left=261
+Right=297
+Top=43
+Bottom=57
 
 [Field 10]
-Type=Checkbox
-Text=Customize
-Left=248
-Right=297
-Top=32
-Bottom=43
+Type=Droplist
+MinLen=1
+Text=Droplist
+ListItems=reb1100|eb1150|reb1200|reb1200-p|prs500-l|prs500
+Left=29
+Right=102
+Top=73
+Bottom=88
+State=reb1100
 
 [Field 11]
-Type=Label
-Text=Output eBook
-Left=9
-Right=53
-Top=124
-Bottom=132
+Type=Checkbox
+Text=no cropping
+Left=109
+Right=157
+Top=76
+Bottom=84
 
 [Field 12]
-Type=Label
-Text=Profile
-Left=134
-Right=154
-Top=32
-Bottom=40
+Type=Checkbox
+Text=no dilation
+Left=169
+Right=218
+Top=76
+Bottom=84
 
 [Field 13]
-Type=Label
-Text=Document
-Left=21
-Right=58
-Top=12
-Bottom=24
+Type=Checkbox
+Text=no edge enhance
+Left=224
+Right=294
+Top=76
+Bottom=84
 
 [Field 14]
-Type=Label
-Text=Format
-Left=32
-Right=56
-Top=32
-Bottom=40
+Type=Text
+MaxLen=4
+Flags=ONLY_NUMBERS
+Left=29
+Right=58
+Top=91
+Bottom=104
 
 [Field 15]
-Type=Label
-Text=Category
-Left=25
-Right=58
-Top=100
-Bottom=108
+Type=Text
+MaxLen=5
+Flags=ONLY_NUMBERS
+Left=70
+Right=101
+Top=91
+Bottom=104
 
 [Field 16]
-Type=Label
-Text=Author
-Left=31
-Right=56
-Top=80
-Bottom=91
+Type=Text
+MinLen=1
+Flags=ONLY_NUMBERS
+State=2.0
+Left=135
+Right=158
+Top=91
+Bottom=104
+MaxLen=5
 
 [Field 17]
+Type=Text
+MinLen=3
+State=300
+Left=190
+Right=214
+Top=91
+Bottom=104
+MaxLen=4
+Flags=ONLY_NUMBERS
+
+[Field 18]
+Type=Text
+MinLen=1
+State=5
+Left=262
+Right=286
+Top=91
+Bottom=104
+MaxLen=1
+
+[Field 19]
+Type=Text
+Left=30
+Right=221
+Top=108
+Bottom=121
+
+[Field 20]
+Type=Checkbox
+Text=optimize generated PNGs
+Left=225
+Right=297
+Top=107
+Bottom=121
+
+[Field 21]
+Type=Label
+Text=Output
+Left=3
+Right=26
+Top=46
+Bottom=57
+
+[Field 22]
+Type=Label
+Text=Pages
+Left=5
+Right=25
+Top=92
+Bottom=104
+
+[Field 23]
+Type=Label
+Text=Profile
+Left=5
+Right=25
+Top=76
+Bottom=89
+
+[Field 24]
+Type=Label
+Text=Edge level\r\n(1-9)
+Left=223
+Right=260
+Top=89
+Bottom=105
+
+[Field 25]
+Type=Label
+Text=Dilation DPI
+Left=164
+Right=190
+Top=89
+Bottom=105
+
+[Field 26]
+Type=Label
+Text=Input
+Left=7
+Right=26
+Top=12
+Bottom=22
+
+[Field 27]
+Type=Label
+Text=Category
+Left=210
+Right=240
+Top=28
+Bottom=36
+
+[Field 28]
+Type=Link
+Text=unpaper
+Left=2
+Right=29
+Top=109
+State=http://unpaper.berlios.de#options
+Bottom=126
+
+[Field 29]
+Type=Label
+Text=Cropping Percent
+Left=104
+Right=133
+Top=89
+Bottom=105
+
+[Field 30]
+Type=Label
+Text=Author
+Left=106
+Right=131
+Top=28
+Bottom=36
+
+[Field 31]
 Type=Label
 Text=Title
-Left=36
-Right=54
-Top=60
-Bottom=73
+Left=10
+Right=26
+Top=28
+Bottom=36
+
+[Field 32]
+Type=Label
+Text=to
+Left=61
+Right=67
+Top=92
+Bottom=100
 
