ToC bug fixes and minor UI tweaks

--- a/src/pdfread-gui.ini
+++ b/src/pdfread-gui.ini
@@ -21,7 +21,7 @@
 ; DEALINGS IN THE SOFTWARE.
 
 [Settings]
-NumFields=32
+NumFields=33
 
 [Field 1]
 Type=Groupbox
@@ -86,18 +86,20 @@ Bottom=38
 Type=FileRequest
 Flags=FILE_EXPLORER|REQ_SAVE|WARN_IF_EXIST|FILE_HIDEREADONLY
 Left=28
-Right=258
+Right=206
 Top=44
 Bottom=57
 Filter=Rocket eBook|*.rb|IMP eBook|*.imp|Sony BBeB|*.lrf|HTML Document|*.html|
 
 [Field 9]
-Type=Checkbox
-Text=preview
-Left=261
-Right=297
+Type=Droplist
+Text=Droplist
+State=default
+ListItems=default|portrait|landscape|landscape-half
+Left=242
+Right=296
 Top=43
-Bottom=57
+Bottom=56
 
 [Field 10]
 Type=Droplist
@@ -115,7 +117,7 @@ Type=Checkbox
 Text=no cropping
 Left=109
 Right=157
-Top=76
+Top=74
 Bottom=84
 
 [Field 12]
@@ -123,7 +125,7 @@ Type=Checkbox
 Text=no dilation
 Left=169
 Right=218
-Top=76
+Top=74
 Bottom=84
 
 [Field 13]
@@ -131,7 +133,7 @@ Type=Checkbox
 Text=no edge enhance
 Left=224
 Right=294
-Top=76
+Top=75
 Bottom=84
 
 [Field 14]
@@ -197,7 +199,7 @@ Text=optimize generated PNGs
 Left=225
 Right=297
 Top=107
-Bottom=121
+Bottom=123
 
 [Field 21]
 Type=Label
@@ -260,7 +262,7 @@ Type=Link
 Text=unpaper
 Left=2
 Right=29
-Top=109
+Top=108
 State=http://unpaper.berlios.de#options
 Bottom=126
 
@@ -295,4 +297,12 @@ Left=61
 Right=67
 Top=92
 Bottom=100
+
+[Field 33]
+Type=Label
+Text=Layout Mode
+Left=211
+Right=236
+Top=42
+Bottom=58
 
